# box-optimizer

./: .env.example  .gitignore  Dockerfile  README.md  config-5.json  config-debug.json  optimized_shipping_plan.xlsx  orders.xlsx  pyproject.toml  requirements.txt  sku_master.xlsx  start-local-upload.ps1  start-power-upload.ps1  test-output-5.xlsx
box_optimizer/: __init__.py  api.py  bundling.py  cli.py  config.py  invoice.py  models.py  normalize.py  padding.py  rate_sources.py  reports.py  sku_matcher.py  standardization.py  weights.py  workflow.py
box_optimizer/io/: column_mapper.py  excel_reader.py  excel_writer.py  qr.py
box_optimizer/packing/: __init__.py  extreme_points.py  geometry.py  packer.py  rotations.py  splitter.py
docs/: BUILD_STATUS.md  CGPT_3D_BIN_V2_CODEX_BUILD_SUMMARY.txt
examples/: sku_master.xlsx
tests/: conftest.py  test_api.py  test_bundling.py  test_excel_output.py  test_excel_reader.py  test_geometry.py  test_invoice.py  test_models.py  test_normalize.py  test_packer.py  test_padding.py  test_rotations.py  test_splitter.py  test_standardization.py  test_weights.py  test_workflow.py
