[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "box_optimizer"
version = "0.1.0"
description = "Python package skeleton for box optimization workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
box-optimizer = "box_optimizer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
